nav & first 3 Section -  1200px  --version 11.83.42

--- a/src/components/home/CoachingsOverview.scss
+++ b/src/components/home/CoachingsOverview.scss
@@ -51,3 +51,15 @@
     }
   }
 }
+
+@media (max-width: 1800px) {
+  // nothing changed
+}
+
+@media (max-width: 1500px) {
+  .CoachingsOverview {
+    .CO__container {
+      padding: 4rem 8rem 8rem;
+    }
+  }
+}
