--- a/src/components/home/HowWeWork.scss
+++ b/src/components/home/HowWeWork.scss
@@ -1,5 +1,5 @@
-@import "../Globals.scss";
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+@import '../Globals.scss';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 .HowWeWork {
   display: block;
@@ -7,63 +7,63 @@
   background-color: $white__color;
   padding: 40px 240px 80px;
   position: relative;
-}
 
-.header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 80px;
-
-  img {
-    position: absolute;
-    top: -50px;
-    width: 100px;
-    height: 100px;
-  }
-
-  h1 {
-    margin-bottom: 0;
-  }
-}
-
-.steps {
-  display: flex;
-  flex-direction: column;
-  gap: 60px;
-}
-
-.step {
-  display: flex;
-  justify-content: space-between;
-
-  img {
-    width: 684px;
-    height: 310px;
-  }
-
-  .left {
+  .header {
     display: flex;
-    gap: 30px;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
+    margin-bottom: 80px;
 
-    .text__box {
-      max-width: 600px;
+    img {
+      position: absolute;
+      top: -50px;
+      width: 100px;
+      height: 100px;
+    }
+
+    h1 {
+      margin-bottom: 0;
     }
   }
-}
 
-.number {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: $primary__color;
-  width: 64px;
-  height: 64px;
-  border-radius: 50%;
-  font-size: 40px;
-  font-family: Roboto;
-  font-weight: 400;
-  color: $white__color;
+  .steps {
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+
+    .step {
+      display: flex;
+      justify-content: space-between;
+
+      img {
+        width: 684px;
+        height: 310px;
+      }
+
+      .left {
+        display: flex;
+        gap: 30px;
+        flex-direction: row;
+        align-items: center;
+
+        .text__box {
+          max-width: 600px;
+        }
+
+        .number {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background-color: $primary__color;
+          width: 64px;
+          height: 64px;
+          border-radius: 50%;
+          font-size: 40px;
+          font-family: Roboto;
+          font-weight: 400;
+          color: $white__color;
+        }
+      }
+    }
+  }
 }
