--- a/src/components/home/HowWeWork.scss
+++ b/src/components/home/HowWeWork.scss
@@ -3,22 +3,22 @@
 
 .HowWeWork {
   display: block;
-  margin: 80px 0;
+  margin: 8rem 0;
   background-color: $white__color;
-  padding: 40px 240px 80px;
+  padding: 4rem 24rem 8rem;
   position: relative;
 
   .header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 80px;
+    margin-bottom: 8rem;
 
     img {
       position: absolute;
-      top: -50px;
-      width: 100px;
-      height: 100px;
+      top: -5rem;
+      width: 10rem;
+      height: 10rem;
     }
 
     h1 {
@@ -29,25 +29,25 @@
   .steps {
     display: flex;
     flex-direction: column;
-    gap: 60px;
+    gap: 6rem;
 
     .step {
       display: flex;
       justify-content: space-between;
 
       img {
-        width: 684px;
-        height: 310px;
+        width: 68.4rem;
+        height: 31rem;
       }
 
       .left {
         display: flex;
-        gap: 30px;
+        gap: 3rem;
         flex-direction: row;
         align-items: center;
 
         .text__box {
-          max-width: 600px;
+          max-width: 60rem;
         }
 
         .number {
@@ -55,10 +55,10 @@
           align-items: center;
           justify-content: center;
           background-color: $primary__color;
-          width: 64px;
-          height: 64px;
+          width: 6.4rem;
+          height: 6.4rem;
           border-radius: 50%;
-          font-size: 40px;
+          font-size: 4rem;
           font-family: Roboto;
           font-weight: 400;
           color: $white__color;
