Standard Styles --version 11.83.46

--- a/src/components/Globals.scss
+++ b/src/components/Globals.scss
@@ -34,6 +34,20 @@ $transition: 0.4s;
   font-weight: normal;
 }
 
+h2 {
+  font-size: 2.4rem;
+}
+
+h3 {
+  font-size: 1.75rem;
+  font-weight: 400;
+}
+
+p {
+  font-size: 1.6rem;
+  font-weight: 400;
+}
+
 //  ============================
 // Wesbite Font
 //  ============================
