HappyStart pxToRem --version 11.83.49

--- a/src/components/home/HappyStart.scss
+++ b/src/components/home/HappyStart.scss
@@ -1,26 +1,25 @@
-@import "../Globals.scss";
+@import '../Globals.scss';
 
 .HappyStart {
-  padding: 0 240px 80px;
+  padding: 0 24rem 8rem;
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 3rem;
   align-items: center;
   background-color: $white__color;
-  margin: 80px;
+  margin: 8rem;
   overflow: hidden;
 
   h1 {
-    margin: 0;
-    margin-bottom: -20px;
+    margin-bottom: -2rem;
   }
 
   button {
     border: none;
     background-color: $primary__color;
     color: $white__color;
-    padding: 20px;
+    padding: 2rem;
     width: 15%;
-    margin: -10px 0 10px 0;
+    margin: -1rem 0 1rem 0;
   }
 }
