blueBtn in Globals  --version 11.83.50

--- a/src/components/Globals.scss
+++ b/src/components/Globals.scss
@@ -75,3 +75,18 @@ html {
 .bg-primary {
   background-color: $primary__color !important;
 }
+
+.blueBtn {
+  margin-top: 1rem;
+  text-transform: uppercase;
+  font-family: 'Montserrat';
+  font-weight: 600;
+  font-size: 2.4rem;
+  line-height: 2.8rem;
+  text-align: center;
+  background: $primary__color;
+  border: none;
+  border-radius: 2rem;
+  padding: 2rem 2rem;
+  color: $white__color;
+}
