blueBtn in HappyStart  --version 11.83.51

--- a/src/components/home/HappyStart.scss
+++ b/src/components/home/HappyStart.scss
@@ -11,15 +11,9 @@
   overflow: hidden;
 
   h1 {
-    margin-bottom: -2rem;
+    margin-bottom: -1.4rem;
   }
-
-  button {
-    border: none;
-    background-color: $primary__color;
-    color: $white__color;
-    padding: 2rem;
-    width: 15%;
-    margin: -1rem 0 1rem 0;
+  p {
+    margin-bottom: -1.4rem;
   }
 }
