--- a/src/components/home/QuoteSection.scss
+++ b/src/components/home/QuoteSection.scss
@@ -1,30 +1,30 @@
-@import "../Globals.scss";
-@import url("https://fonts.googleapis.com/css2?family=Cookie&family=Montserrat:wght@700&display=swap");
+@import '../Globals.scss';
+@import url('https://fonts.googleapis.com/css2?family=Cookie&family=Montserrat:wght@700&display=swap');
 
 .QuoteSection {
-  padding: 40px 240px 0px;
+  padding: 4rem 24rem 0rem;
   display: flex;
-  gap: 80px;
+  gap: 8rem;
   align-items: center;
   background-color: $primary__color;
 
   > img {
-    width: 700px;
+    width: 70rem;
     height: auto;
   }
 
   .right {
     display: flex;
     flex-direction: column;
-    max-width: 820px;
+    max-width: 82rem;
 
     h1 {
       color: $white__color;
       font-family: Roboto;
       font-style: normal;
       font-weight: bold;
-      font-size: 48px;
-      line-height: 56px;
+      font-size: 4.8rem;
+      line-height: 5.6rem;
     }
 
     p {
@@ -32,33 +32,33 @@
       font-family: Roboto;
       font-style: normal;
       font-weight: 500;
-      font-size: 24px;
-      line-height: 28px;
-      max-width: 450px;
-      margin-top: -20px;
-      margin-bottom: 40px;
+      font-size: 2.4rem;
+      line-height: 2.8rem;
+      max-width: 45rem;
+      margin-top: -2rem;
+      margin-bottom: 4rem;
     }
 
     img {
-      height: 60px;
+      height: 6rem;
       width: auto;
     }
 
     img:nth-child(1) {
-      margin-left: -60px;
-      margin-bottom: -30px;
+      margin-left: -6rem;
+      margin-bottom: -3rem;
       align-self: flex-start;
     }
     img:nth-child(3) {
-      margin-top: -40px;
+      margin-top: -4rem;
       align-self: flex-end;
     }
 
     button {
-      font-family: "Montserrat";
+      font-family: 'Montserrat';
       font-weight: 600;
-      font-size: 24px;
-      line-height: 28px;
+      font-size: 2.4rem;
+      line-height: 2.8rem;
       text-align: center;
       max-width: 30%;
       background: $secondary__color;
@@ -69,8 +69,8 @@
         $secondary__color 100%
       );
       border: none;
-      border-radius: 20px;
-      padding: 20px 20px;
+      border-radius: 2rem;
+      padding: 2rem 2rem;
       color: $primary__color;
     }
   }
