General Fixes className  --version 11.83.55

--- a/src/components/Globals.scss
+++ b/src/components/Globals.scss
@@ -68,6 +68,10 @@ html {
 // Gloabal Classes
 //  ============================
 
+.hidden {
+  display: none;
+}
+
 .text-primary {
   color: $primary__color !important;
 }
