--- a/src/components/general/Navbar.scss
+++ b/src/components/general/Navbar.scss
@@ -1,5 +1,25 @@
 @import '../Globals.scss';
 
+.navWrapper {
+  display: none;
+  background-color: $white__color;
+  border-radius: 50%;
+  padding: 1rem;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 2rem;
+  right: 4rem;
+  z-index: 999;
+
+  .navIcon {
+    display: none;
+    width: 2rem;
+    height: 2rem;
+    color: $primary__color;
+  }
+}
+
 .Navbar {
   display: flex;
   gap: 18rem;
@@ -156,5 +176,19 @@
         margin-left: 0.4rem;
       }
     }
+  }
+}
+
+@media (max-width: 900px) {
+  .navWrapper {
+    display: flex;
+
+    .navIcon {
+      display: block;
+    }
+  }
+
+  .Navbar {
+    display: none;
   }
 }
