--- a/src/components/profile/NewProfile.scss
+++ b/src/components/profile/NewProfile.scss
@@ -189,6 +189,9 @@
       display: grid;
       grid-template-columns: 350px 350px ;
       gap: 20px;
+      min-height: 350.625px;
+      min-width: 249.387px;
+
     }
     .title  {
       font-size: larger;
