--- a/src/components/services/Services.scss
+++ b/src/components/services/Services.scss
@@ -125,14 +125,14 @@
           align-items: center;
           p {
             color: $darker_gray__color;
-            font-size: 12px;
-            text-transform: uppercase;
+            font-size: 10px;
+            // text-transform: uppercase;
           }
           .price {
             margin-left: 4px;
             color: $darker_gray__color;
-            font-weight: 500;
-            font-size: 22px;
+            font-weight: 400;
+            font-size: 15px;
           }
         }
       }
