--- a/src/components/chat/Chat.scss
+++ b/src/components/chat/Chat.scss
@@ -1,4 +1,4 @@
-@import "../Globals.scss";
+@import '../Globals.scss';
 
 .Chat {
   // padding: 0 240px 80px; // not working
@@ -51,7 +51,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Roboto";
+    font-family: 'Roboto';
     font-style: normal;
     font-weight: normal;
   }
