--- a/src/components/profile/Profile.scss
+++ b/src/components/profile/Profile.scss
@@ -112,7 +112,7 @@
           line-height: 20px;
           color: $black__color;
           font-weight: bold;
-          transition: all .4s;
+          transition: all 0.4s;
         }
 
         a:hover {
@@ -154,7 +154,6 @@
       }
 
       .language {
-
         .languageName {
           font-size: 14px;
         }
