Interface Fixes HowWeWork--version 12.30.06

--- a/src/components/home/HowWeWork.scss
+++ b/src/components/home/HowWeWork.scss
@@ -98,3 +98,18 @@
     }
   }
 }
+
+@media (max-width: 900px) {
+  .HowWeWork {
+    padding: 6rem 4rem 8rem;
+
+    .steps {
+      .step {
+        img {
+          width: 32rem;
+          height: auto;
+        }
+      }
+    }
+  }
+}
