--- a/src/components/general/Navbar.scss
+++ b/src/components/general/Navbar.scss
@@ -20,6 +20,11 @@
   }
 }
 
+.Navbar.scrolled {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  padding-block: 5px;
+}
+
 .Navbar {
   display: flex;
   gap: 18rem;
@@ -29,6 +34,7 @@
   position: sticky;
   top: 0;
   z-index: 1;
+  transition: .2s;
   background-color: $primary__color;
 
   * {
