hero section fixes --version 12.30.12

--- a/src/components/home/CoachingsOverview.scss
+++ b/src/components/home/CoachingsOverview.scss
@@ -22,7 +22,7 @@
     column-gap: 20rem;
     padding: 4rem 16rem;
     z-index: 1;
-    margin-top: -20rem;
+    // margin-top: -20rem;
 
     .catagory {
       padding: 2rem;
