--- a/src/components/form/SignIn.scss
+++ b/src/components/form/SignIn.scss
@@ -38,6 +38,7 @@
     font-size: 28px;
     line-height: 46px;
     margin: 15%;
+    margin-bottom: 10px;
   }
 
   input {
@@ -53,7 +54,7 @@
     font-size: 16px;
     margin: 5% auto;
     outline: none;
-    padding: 5px;
+    padding: 5px 5px 5px 20px;
     transition: .4s;
   }
 
