--- a/src/components/form/SignUpForm.scss
+++ b/src/components/form/SignUpForm.scss
@@ -31,6 +31,7 @@
       font-size: 28px;
       line-height: 46px;
       margin: 8%;
+      margin-bottom: 10px;
     }
     p {
       font-family: Roboto;
@@ -56,7 +57,7 @@
       font-size: 16px;
       margin: 5% auto;
       outline: none;
-      padding: 5px;
+      padding: 5px 5px 5px 20px;
       transition: .4s;
     }
 
