--- a/src/components/form/SignIn.scss
+++ b/src/components/form/SignIn.scss
@@ -14,8 +14,9 @@
     button {
       background: none;
       border: none;
-      font-size: 20px;
+      font-size: 25px;
       transition: $transition;
+      transform: scaleY(.7);
     }
 
     button:hover {
