HomeSection Styles  --version 12.30.29

--- a/src/components/home/HeroSection.scss
+++ b/src/components/home/HeroSection.scss
@@ -4,10 +4,15 @@
 
 .HeroSection {
   padding: 4rem 24rem 8rem;
-  background: rgb(51,51,51);
-  background: linear-gradient(90deg, rgba(51,51,51,1) 0%, rgba(33,99,165,1) 29%, rgba(33,165,152,1) 100%);
-  height: 100vh !important;
-  min-height: 100vh;
+  background: rgb(51, 51, 51);
+  background: linear-gradient(
+    90deg,
+    rgba(51, 51, 51, 1) 0%,
+    rgba(33, 99, 165, 1) 29%,
+    rgba(33, 165, 152, 1) 100%
+  );
+  // height: 100vh !important;
+  min-height: 60vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -15,10 +20,16 @@
   background-size: 200% 200%;
   animation: Animation 5s ease infinite;
 
-  @keyframes Animation { 
-    0%{background-position:10% 0%}
-    50%{background-position:91% 100%}
-    100%{background-position:10% 0%}
+  @keyframes Animation {
+    0% {
+      background-position: 10% 0%;
+    }
+    50% {
+      background-position: 91% 100%;
+    }
+    100% {
+      background-position: 10% 0%;
+    }
   }
 
   .relativeBox {
@@ -26,10 +37,10 @@
   }
 
   .relativeBox img {
-    width: 65rem;
+    width: 55rem;
     height: auto;
     position: absolute;
-    bottom: -20rem;
+    bottom: -25rem;
     right: 0rem;
   }
 
@@ -75,7 +86,8 @@
     }
 
     .search__input:focus {
-      box-shadow: rgba(33, 99, 165, 0.3) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+      box-shadow: rgba(33, 99, 165, 0.3) 0px 2px 5px -1px,
+        rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     }
   }
 }
