--- a/src/components/general/Navbar.scss
+++ b/src/components/general/Navbar.scss
@@ -44,7 +44,8 @@
 }
 
 .Navbar.scrolled {
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   padding-block: 5px;
 }
 
@@ -57,7 +58,7 @@
   position: sticky;
   top: 0;
   z-index: 1;
-  transition: .2s;
+  transition: 0.2s;
   background-color: $primary__color;
 
   * {
@@ -103,7 +104,9 @@
       flex: 1;
       background: none;
       border: none;
-      padding: 1rem;
+      padding: 0.8rem;
+      font-size: 1.2rem;
+      font-weight: 600;
     }
     input:focus {
       color: $white__color;
