--- a/src/components/general/Footer.scss
+++ b/src/components/general/Footer.scss
@@ -1,11 +1,12 @@
-@import "../Globals.scss";
+@import '../Globals.scss';
 
 .Footer {
   .nav {
-    padding: 3rem 10rem;
+    padding: 4rem 24rem 8rem;
     background-color: $white__color;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
     row-gap: 60px;
     overflow: hidden;
 
@@ -17,11 +18,12 @@
         align-items: flex-start;
 
         a {
-          font-size: 14px;
-          color: $black__color;
+          font-size: 1.8rem;
+          font-weight: 500;
+          color: $gray__color;
           text-decoration: none;
           margin-bottom: 4px;
-          transition: .4s;
+          transition: 0.4s;
         }
 
         a:hover {
@@ -40,7 +42,7 @@
           color: $black__color;
           text-decoration: none;
           margin-inline-end: 4px;
-          transition: .4s;
+          transition: 0.4s;
         }
 
         a:hover {
@@ -51,7 +53,9 @@
       h2 {
         color: $primary__color;
         margin-bottom: 10px;
-        text-transform: uppercase;
+        font-size: 2.4rem;
+        margin-bottom: 1.2rem;
+        // text-transform: uppercase;
       }
     }
   }
@@ -69,7 +73,7 @@
       font-size: 14px;
       color: $white__color;
       text-decoration: none;
-      transition: .4s;
+      transition: 0.4s;
     }
 
     a:hover {
