--- a/src/components/ui/Modal.scss
+++ b/src/components/ui/Modal.scss
@@ -12,8 +12,8 @@
 .Modal {
   text-align: center;
   position: fixed;
+  padding: 2rem 2rem 2rem 2rem;
   width: 400px;
-  height: 500px;
   top: 50%;
   left: 50%;
   margin-top: -250px; /* Negative half of height. */
