HomeResponsive till 1200px--version 12.30.35

--- a/src/components/general/Footer.scss
+++ b/src/components/general/Footer.scss
@@ -82,6 +82,14 @@
   }
 }
 
+@media only screen and (max-width: 1500px) {
+  .Footer {
+    .nav {
+      padding: 4rem 6rem 8rem;
+    }
+  }
+}
+
 @media only screen and (max-width: 992px) {
   .Footer {
     .nav {
