HomeResponsive till 900px--version 12.30.37

--- a/src/components/home/QuoteSection.scss
+++ b/src/components/home/QuoteSection.scss
@@ -125,3 +125,45 @@
     }
   }
 }
+
+@media (max-width: 1200px) {
+  .QuoteSection {
+    padding: 4rem 8rem 0rem;
+    > img {
+      width: 32rem;
+    }
+
+    .right {
+      h1 {
+        font-size: 2.4rem;
+        line-height: 4.4rem;
+      }
+
+      p {
+        font-size: 1.4rem;
+        margin-top: 1rem;
+        margin-bottom: 4rem;
+      }
+
+      button {
+        padding: 1rem;
+        font-size: 2rem;
+      }
+
+      img {
+        height: 4rem;
+        width: auto;
+      }
+
+      img:nth-child(1) {
+        margin-left: -4.2rem;
+        margin-bottom: -2rem;
+        align-self: flex-start;
+      }
+      img:nth-child(3) {
+        margin-top: -3rem;
+        align-self: flex-end;
+      }
+    }
+  }
+}
