HomeResponsive till 900px--version 12.30.42

--- a/src/components/home/HappyStart.scss
+++ b/src/components/home/HappyStart.scss
@@ -21,3 +21,11 @@
     text-align: center;
   }
 }
+
+@media (max-width: 900px) {
+  .HappyStart {
+    border-top: 2px solid $light__primary__color;
+    margin: 0px;
+    padding: 0 8rem 4rem;
+  }
+}
