--- a/src/components/home/HeroSection.scss
+++ b/src/components/home/HeroSection.scss
@@ -150,3 +150,23 @@
     }
   }
 }
+
+@media (max-width: 900px) {
+  .HeroSection {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    .relativeBox img {
+      display: none;
+    }
+
+    .hero__heading {
+      font-size: 3.6rem;
+      line-height: 4.7rem;
+
+      .Cookie {
+        font-size: 5.2rem;
+      }
+    }
+  }
+}
