--- a/src/components/home/HowWeWork.scss
+++ b/src/components/home/HowWeWork.scss
@@ -101,13 +101,27 @@
 
 @media (max-width: 900px) {
   .HowWeWork {
-    padding: 6rem 4rem 8rem;
+    margin: 0;
+    padding: 6rem 2.4rem 8rem;
 
     .steps {
       .step {
         img {
-          width: 32rem;
+          width: 22rem;
           height: auto;
+        }
+
+        .left {
+          display: flex;
+          gap: 2rem;
+          flex-direction: row;
+          align-items: center;
+
+          .number {
+            min-width: 3.2rem;
+            height: 3.2rem;
+            font-size: 2rem;
+          }
         }
       }
     }
