add blog adjustment--version 12.30.43
* add blog page adjustment
* clean code

--- a/src/components/general/Footer.scss
+++ b/src/components/general/Footer.scss
@@ -14,7 +14,7 @@
       .links {
         display: flex;
         flex-direction: column;
-        justify-content: start;
+        justify-content: flex-start;
         align-items: flex-start;
 
         a {
@@ -34,7 +34,7 @@
       .social-links {
         display: flex;
         flex-direction: row;
-        justify-content: start;
+        justify-content: flex-start;
         align-items: flex-start;
 
         a {
