--- a/src/components/Coaches.scss
+++ b/src/components/Coaches.scss
@@ -8,7 +8,7 @@
     min-height: 500px;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     z-index: -1;
 
     * {
