--- a/src/components/blog/AddBlog.scss
+++ b/src/components/blog/AddBlog.scss
@@ -65,6 +65,12 @@
                 color: $green__darker__color;
             }
 
+            .error {
+                font-size: 14px;
+                font-weight: bold;
+                color: #d9534f;
+            }
+
             .btn__primary {
                 width: fit-content;
                 padding-inline: 12px;
