--- a/src/components/chat/Chat.scss
+++ b/src/components/chat/Chat.scss
@@ -148,7 +148,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        justify-content: end;
+        justify-content: flex-end;
 
         .message__box {
           color: $white__color;
