--- a/src/components/home/CoachingsOverview.scss
+++ b/src/components/home/CoachingsOverview.scss
@@ -28,7 +28,7 @@
       padding: 2rem;
       display: flex;
       align-items: center;
-      justify-content: start;
+      justify-content: flex-start;
       gap: 2rem;
 
       .catagory__icon__wrapper {
