--- a/src/components/home/Benefits.scss
+++ b/src/components/home/Benefits.scss
@@ -255,3 +255,101 @@
     }
   }
 }
+
+@media (max-width: 600px) {
+  .Benefits {
+    padding: 2rem 4rem 8rem;
+    margin: 12rem 0;
+
+    .start__changing {
+      display: flex;
+      flex-direction: column;
+      align-self: center;
+      justify-content: center;
+      padding: 2rem;
+      overflow: hidden;
+
+      .differences__container {
+        gap: 1rem;
+
+        .differnce {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          padding: 1rem;
+
+          img {
+            width: 4.2rem;
+          }
+          h2 {
+            font-size: 1.4rem;
+          }
+
+          p {
+            font-size: 1rem;
+            line-height: 1.2rem;
+          }
+        }
+      }
+    }
+
+    .focus__on__help {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 2rem;
+
+      .searchIcon {
+        width: 4.2rem;
+        margin-bottom: 0.6rem;
+      }
+
+      .help__options__container {
+        margin-top: 3.2rem;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        gap: 8rem;
+        align-items: center;
+        justify-content: center;
+
+        .help__option {
+          max-width: 40rem;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+
+          img {
+            width: 4.2rem;
+            margin-bottom: 0.8rem;
+          }
+
+          h3 {
+            font-weight: 600;
+            margin-bottom: 0.6rem;
+          }
+          h3,
+          p {
+            text-align: center;
+          }
+        }
+      }
+    }
+
+    .request__a__coach {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      padding: 2rem;
+      align-items: center;
+
+      img {
+        width: 4.2rem;
+      }
+
+      p {
+        margin-bottom: 10px;
+      }
+    }
+  }
+}
