--- a/src/components/home/HowWeWork.scss
+++ b/src/components/home/HowWeWork.scss
@@ -127,3 +127,41 @@
     }
   }
 }
+
+@media (max-width: 900px) {
+  .HowWeWork {
+    margin: 0;
+    padding: 6rem 2.4rem 8rem;
+
+    .steps {
+      .step {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        gap: 1rem;
+        img {
+          width: 22rem;
+          height: auto;
+        }
+
+        .left {
+          display: flex;
+          gap: 2rem;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          .text__box {
+            text-align: center;
+          }
+
+          .number {
+            min-width: 3.2rem;
+            height: 3.2rem;
+            font-size: 2rem;
+          }
+        }
+      }
+    }
+  }
+}
