--- a/src/components/home/QuoteSection.scss
+++ b/src/components/home/QuoteSection.scss
@@ -212,3 +212,57 @@
     }
   }
 }
+
+@media (max-width: 900px) {
+  .QuoteSection {
+    padding: 1rem;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    gap: 2rem;
+    > img {
+      width: 22rem;
+      margin-bottom: -3rem;
+    }
+
+    .right {
+      align-items: center;
+      h1 {
+        text-align: center;
+        font-size: 2rem;
+        line-height: 2.2rem;
+      }
+
+      p {
+        text-align: center;
+
+        font-size: 1.4rem;
+        margin-top: 1rem;
+        margin-bottom: 4rem;
+        line-height: 2.2rem;
+      }
+
+      button {
+        padding: 0.4rem 1rem;
+        font-size: 1.8rem;
+      }
+
+      img {
+        height: 4rem;
+        width: auto;
+      }
+
+      img:nth-child(1) {
+        margin-left: -0.7rem;
+        margin-bottom: 0rem;
+        align-self: flex-start;
+      }
+      img:nth-child(3) {
+        margin-top: -2rem;
+        margin-right: 0rem;
+        align-self: flex-end;
+      }
+    }
+  }
+}
